Correct vertical alignment of fretboard

--- a/src/fretboard/fretboard.css
+++ b/src/fretboard/fretboard.css
@@ -6,6 +6,7 @@
     display: inline-block;
     margin-left: 1em;
     margin-right: 1em;
+    vertical-align: top;
 }
 
 .fret {
